testdata/invalid/unclosed_paren.pr
// Unclosed parenthesis in call.
main() {
  f(1, 2;
}
